# ai

./: .dockerignore  .env.docker  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  example_product_detection.py  example_speech_to_text.py  example_text_to_speech.py  example_usage.py  pyproject.toml  requirements.txt
docs/: API.md  DOCKER.md  USAGE_GUIDE.md
examples/: complete_workflow.py
nginx/: nginx.conf
scripts/: deploy.sh  init.sql  setup-gpu.sh
src/: __init__.py  cli.py
src/ai_engine/: batch_processor.py  product_detector.py  speech_processor.py  subtitle_generator.py  tts_processor.py  video_editor.py  video_upscaler.py
src/api/: main.py  product_detection.py  speech_to_text.py  text_to_speech.py  video_upscale.py
src/frontend/: index.html
src/frontend/static/js/: app.js
